cluster/chat-demo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-demo-ingress
  namespace: chat-demo
  annotations:
    cert-manager.io/issuer: chat-demo-issuer
spec:
  tls:
  - hosts:
      - kfuks.chat-demo.devel.techcast.cloud
    secretName: chat-demo-ingress-cert
  rules:
  - host: kfuks.chat-demo.devel.techcast.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              name: http
      - path: /rta
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              name: http
